fix alignement of value description in autocompletebox

--- a/src/elements/AutoCompleteBox/_autocomplete.scss
+++ b/src/elements/AutoCompleteBox/_autocomplete.scss
@@ -21,6 +21,7 @@
         font-family: "Roboto Mono", monospace;
         font-size: $ecc-size-typo-caption;
         direction: rtl;
+        text-align: left;
     }
 
     .Select-option__description {
